updated vignettes and moved some files to inst

--- a/vignettes/malbacR_vignette_condensed_filtered.Rmd
+++ b/vignettes/malbacR_vignette_condensed_filtered.Rmd
@@ -1,11 +1,28 @@
 ---
-title: 'malbacR: Vignette'
+title: 'malbacR: A Vignette Pertaining to Pre-Filtered Data'
 author: "Damon Leach, Kelly Stratton, Lisa Bramer"
 date: "`r Sys.Date()`"
 output: html_document
+bibliography: analysis_ref.bib
 ---
 
-This outline demonstrates the functionality and use of the `malbacR` package. Within this package, there are four datasets: `pmart_amide`, `pmart_mix`,`pmart_amideFilt`, and `pmart_mixFilt`. The first two are obtained from other packages `WaveICA2.0` and `cmrn` respectively that have dealt with batch corrections. The second two packages are simply filtered versions of the first two packages that need no additional data manipulation for batch correction to successfully run. First this outline, we work with the unfiltered datasets.
+The R package `malbacR` is a new package that deals with batch correction methods of small molecule omics data. It works in conjunction with `pmartR`, an R package designed for preprocessing, filtering, and analyzing multi-omics data [@pmartr; @pmartr2].
+
+This outline demonstrates the functionality and use of the `malbacR` package. Within this package, there are four data sets: `pmart_amide`, `pmart_amideFilt`,`pmart_mix`, and `pmart_mixFilt`. The first two objects contain data originally found in the package `WaveICA2.0` [@waveica_package]. The second two objects contain data originally found in the package `crmn` [@crmn_package]. The data sets with the suffix "Filt" are filtered versions of the original data sets. That is, unlike their non-filtered counterparts, these data objects require no additional data manipulation for batch correction to successfully run. For this example, we work with the filtered data sets to demonstrate how the `malbacR` functions work.
+
+Within `malbacR` there are 11 batch correction methods:
+
+1. Range Scaling [@scaling_paper]
+2. Power Scaling [@scaling_paper]
+3. Pareto Scaling [@scaling_paper]
+4. ComBat [@combat_paper]
+5. EigenMS [@eigenMS_paper]
+6. NOMIS [@nomis_paper]
+7. RUV-random [@ruvrandom_paper]
+8. QC-RLSC [@qcrlsc_paper]
+9. WaveICA2.0 [@waveica_paper]
+10. TIGER [@tiger_paper]
+11. SERRF [@serrf_paper]
 
 ```{r, echo = FALSE}
 knitr::opts_chunk$set(message = FALSE)
@@ -17,11 +34,11 @@ library(pmartR)
 library(ggplot2)
 ```
 
-## Dataset 1: Amide Data
+## Data Set 1: Amide Data
 
 ### Load in the Data
 
-A `pmartR` friendly version of the Amide data that has already undergone filtering and log2 transformations is already implemented within `malbacR`. Therefore, we simply load in the data.
+A `pmartR` friendly version of the "Amide" data that has already undergone filtering and log2 transformations is already implemented within `malbacR`. Therefore, we simply load in the data.
 
 ```{r}
 data(pmart_amideFilt)
@@ -29,7 +46,7 @@ data(pmart_amideFilt)
 
 ### Run Batch Correction Methods
 
-The Amide dataset contains information regarding quality control samples. Therefore the following methods can be used:
+The "Amide" data set contains information regarding quality control samples. Therefore the following methods can be used:
 
 - Range Scaling
 - Power Scaling
@@ -40,7 +57,7 @@ The Amide dataset contains information regarding quality control samples. Theref
 - SERRF
 - ComBat
 
-It is important to note that the data `pmart_amideFilt` has been filtered, transformed, and imputed such that the data runs with all possible methods, but it may be conservative for a given method. For example, some methods do not require imputation to run.
+It is important to note that the data `pmart_amideFilt` has been filtered, transformed, and imputed such that the data runs with all possible methods, but it may be conservative for a given method. For example, some methods do not require imputation to run, but because some methods require imputation (like SERRF and WaveICA2.0) [@serrf_paper;@waveica_paper], the data has been imputed.
 
 ```{r, results = 'hide'}
 # SCALING METHODS
@@ -80,7 +97,7 @@ amide_wave <- bc_waveica(omicsData = pmart_amideFilt, injection_cname = "Injecti
 
 ### Data Visualization
 
-After obtaining all the different batch corrected datasets, we can plot the PPCA to see if they are successfully returning batch corrected data. We set the `group_designation` to use our batch information as the `main_effects` so as to color the data by batch. All of this code is run using functions from `pmartR` demonstrating the utility between the two packages.
+After obtaining all the different batch corrected data sets, we can plot the PPCA to see if they are successfully returning batch corrected data. We set the `group_designation` to use our batch information as the `main_effects` so as to color the data by batch. All of this code is run using functions from `pmartR` demonstrating the utility between the two packages.
 
 ```{r, out.width = "33%"}
 pmart_amide <- group_designation(pmart_amideFilt,main_effects = "batch")
@@ -106,11 +123,11 @@ p9 <- plot(dim_reduction(omicsData = amide_serrf))+ scale_colour_discrete(name="
 p1;p2;p3;p4;p5;p6;p7;p8;p9
 ```
 
-## Dataset 2: Mix Data
+## Data Set 2: Mix Data
 
 ### Load in the Data
 
-The `malbacR` package includes other `pmartR` friendly data set for the mix data which has already undergone filtering and log2 transformations is already implemented within `malbacR`. Therefore, we simply load in the data.
+The `malbacR` package includes another `pmartR` friendly data set for the "mix" data which has already undergone filtering and log2 transformations is already implemented within `malbacR`. Therefore, we simply load in the data.
 
 ```{r}
 data(pmart_mixFilt)
@@ -118,7 +135,7 @@ data(pmart_mixFilt)
 
 ### Run Batch Correction Methods
 
-The mix dataset contains information regarding negative controls/internal standards. Therefore the following methods can be used:
+The "mix" data set contains information regarding negative controls/internal standards. Therefore the following methods can be used:
 
 - Range Scaling
 - Power Scaling
@@ -127,7 +144,9 @@ The mix dataset contains information regarding negative controls/internal standa
 - NOMIS
 - ComBat
 
-It is important to note that the data `pmart_mixFilt` has been filtered and transformed such that the data runs with all possible methods, but it may be conservative for a given method.
+As there is no information regarding QC samples or injection order, the other batch correction methods in the package or not able to be used with this data set.
+
+As with the `pmart_amideFilt` data set, is important to note that the data in `pmart_mixFilt` has been filtered and transformed such that the data runs with all possible methods, but it may be conservative for a given method. As there were no missing data with the "mix" data set, no imputation was computed.
 
 ```{r, warning = FALSE}
 # SCALING METHODS
@@ -153,7 +172,7 @@ mix_combat <- bc_combat(omicsData = pmart_mixFilt)
 
 ### Mix: Data Visualization
 
-Similar to the previous dataset, we can compare the PCA plots between the unadjusted and adjusted data sets.
+Similar to the previous data set, we can compare the PCA plots between the unadjusted and adjusted data sets.
 
 ```{r,out.width = "33%"}
 pmart_mix <- group_designation(pmart_mixFilt,main_effects = "BatchNum")
@@ -174,3 +193,5 @@ p7 <- plot(dim_reduction(omicsData = mix_pareto)) + scale_colour_discrete(name="
 
 p1;p2;p3;p4;p5;p6;p7
 ```
+
+## References
