updated r code to add normalization features as TRUE

--- a/vignettes/analysis_ref.bib
+++ b/vignettes/analysis_ref.bib
@@ -441,3 +441,13 @@
   number = {24},
   pages = {4736-4741},
   doi = {10.1002/pmic.201100078}}
+  
+@article{qcrfsc_paper,
+  title = {statTarget: A streamlined tool for signal drift correction and interpretations of quantitative
+  mass spectrometry-based omics data},
+  author = {Luan, Hemi and Ji, Fenfen and Chen, Yu and Cai, Zongwei},
+  journal = {Analytica Chimica Acta},
+  year = {2018},
+  volume = {1036},
+  pages = {66-72},
+  doi = {10.1016/j.aca.2018.08.002}}
