--- a/vignettes/malbacR_vignette_condensed_filtered.Rmd
+++ b/vignettes/malbacR_vignette_condensed_filtered.Rmd
@@ -104,7 +104,7 @@ amide_eigen <- bc_eigenMS(omicsData = pmart_amideFilt)
 
 # WaveICA2.0
 amide_wave <- bc_waveica(omicsData = pmart_amideFilt, injection_cname = "Injection_order",
-                         alpha = 0, cutoff = 0.1, K = 10)
+                         version = "WaveICA2.0", alpha = 0, cutoff_injection = 0.1, K = 10)
 
 # QC-RFSC
 pmart_amideFilt_abundance <- pmartR::edata_transform(pmart_amideFilt,"abundance")
